create get population

--- a/Frontend/src/app/components/simulation-details/simulation-details.component.html
+++ b/Frontend/src/app/components/simulation-details/simulation-details.component.html
@@ -1,1 +1,23 @@
-<p>simulation-details works!</p>
+<div class="col-12">
+    <p-table [value]="[population[0]]" [tableStyle]="{ 'min-width': '50rem' }">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Pi</th>
+                <th>Pv</th>
+                <th>Pm</th>
+                <th>Pr</th>
+                <th>Edit</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-population>
+            <tr>
+                <td>{{ population.pi}}</td>
+                <td>{{ population.pv }}</td>
+                <td>{{ population.pm }}</td>
+                <td>{{ population.pr }}</td>
+                <td><p-button icon="pi pi-pencil" [rounded]="true"severity="warning" pTooltip="Delete simulation"/></td>
+
+            </tr>
+        </ng-template>
+</p-table>
+</div>
