--- a/Frontend/src/app/components/simulation-details/simulation-details.component.html
+++ b/Frontend/src/app/components/simulation-details/simulation-details.component.html
@@ -15,7 +15,7 @@
                 <td>{{ population.pv }}</td>
                 <td>{{ population.pm }}</td>
                 <td>{{ population.pr }}</td>
-                <td><p-button icon="pi pi-pencil" [rounded]="true"severity="warning" pTooltip="Edit"/></td>
+                <td><p-button icon="pi pi-pencil" [rounded]="true"severity="warning" pTooltip="Edit"(click)="showDialog()"/></td>
 
             </tr>
         </ng-template>
@@ -28,5 +28,6 @@
     <div class="col-12 sm:col-12 md:col-12 lg:col-6 xl:col-6"><p-chart type="line" [data]="recovery" [options]="options" /></div>
     <div class="col-12 sm:col-12 md:col-12 lg:col-6 xl:col-6"><p-chart type="line" [data]="dead" [options]="options" /></div>
     <div class="col-12 sm:col-12 md:col-12 lg:col-6 xl:col-6"><p-chart type="line" [data]="allData" [options]="options" /></div>
-    <div class="col-12 text-center" [routerLink]="['/simulation']"><p-button icon="pi pi-arrow-left" severity="secondary" pTooltip="Back to simulation list"/></div>
+    <div class="col-12 text-center" [routerLink]="['/simulation']"><p-button icon="pi pi-arrow-left" severity="secondary" pTooltip="Back to simulation list" /></div>
 </div>
+<app-form  [(visible)]="visible" [buttonType]="'Update'" (afterSave)="afterChange()"></app-form>
