--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="grid justify-content-center">
-  <div class="col-8">
+    <div class="col-8">
     <router-outlet></router-outlet>
-  </div>
+</div>
 </div>
 
+<p-toast position="top-right"></p-toast> 
